--- a/src/main/resources/templates/requestList.html
+++ b/src/main/resources/templates/requestList.html
@@ -48,7 +48,7 @@
                     </td>
                     <td th:text="${requests.application_closing_date}"></td>
                     <td>
-                        <form method="post" th:case="true" th:action="@{/closeRequest/{id}(id=${requests.id})}">
+                        <form method="post" th:case="false" th:action="@{/closeRequest/{id}(id=${requests.id})}">
                             <button type="submit" name="submit" value="value" class="btn btn-outline-primary ml-1 mr-1">
                                 Закрыть заявку
                             </button>
