--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -41,7 +41,7 @@
                 <td th:text="${user.phoneNumber}"></td>
                 <td th:text="${user.getFullName()}"></td>
                 <td><a th:href="@{userUpdate/{id}(id=${user.id})}" class="btn btn-outline-primary ml-2 mr-2" role="button">Редактировать</a></td>
-                <td><a th:href="@{user-delete/{id}(id=${user.id})}" class="btn btn-outline-primary ml-2 mr-2" role="button">Удалить</a></td>
+                <td><a th:href="@{user-delete/{id}(id=${user.id})}" class="btn btn-danger ml-1 mr-1" role="button">Удалить</a></td>
             </tr>
             </tbody>
         </table>
