--- a/src/main/resources/templates/computer-details.html
+++ b/src/main/resources/templates/computer-details.html
@@ -53,7 +53,7 @@
                     <td>
                         <a sec:authorize="hasAnyAuthority('Engineer', 'Admin')"
                            th:href="@{installedsoftwares-delete/{id}(id=${installedsoftwares.id})}"
-                           th:case="false" class="btn btn-danger ml-1 mr-1" role="button">Удалить</a>
+                           th:case="true" class="btn btn-danger ml-1 mr-1" role="button">Удалить</a>
                     </td>
                 </div>
 
